--- a/src/styles/BusList.scss
+++ b/src/styles/BusList.scss
@@ -1,29 +1,16 @@
 @mixin commonCode() {
-    > h1 {
-        font-size: 2.5rem;
-        text-transform: uppercase;
-    }
-
-    > p {
-        font-size: 1.7rem;
-        color: white;
-        background-color: red;
-        padding: .5rem 1.5rem;
-        font-weight: bold;
-    }
-
-    > h2 {
-        font-size: 2.3rem;
-        text-transform: capitalize;
-    }
-
-    > .departure, .arrival {
+    > .name,
+    .departure, 
+    .arrival,
+    .rating,
+    .price {
          > h2 {
             font-size: 2.3rem;
         }
         > p {
             font-size: 1.5rem;
             text-align: center;
+            border-bottom: 1px solid black;
             text-transform: uppercase;
             letter-spacing: 1px;
             margin-bottom: 0.5rem;
@@ -32,15 +19,17 @@
     }
 
     > .rating {
-        background-color: rgb(15, 189, 15);
-        padding: .5rem 1.5rem;
+        > h2 {
+            background-color: rgb(15, 189, 15);
+            padding: .5rem 1.5rem;
+        }
     }
 }
 
 @mixin listHeadCode($padding) {
     background-color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: $padding;
     cursor: pointer;
@@ -55,16 +44,9 @@
     .bus-list-main {
         background-color: red;
         padding: 1.5rem 5rem;
-    
-        > .bus-list-head {
-            @include listHeadCode(2rem 5rem);
-    
-            @include commonCode();
-        }
 
         > .bus-head {
             @include listHeadCode(2rem 5rem);
-
             @include commonCode();
         }
     }
