--- a/src/styles/SearchBus.scss
+++ b/src/styles/SearchBus.scss
@@ -1,20 +1,24 @@
 .form-container {
-    height: 33rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 5rem 0;
 
     > .form {
         padding: 5rem;
         background-color: gainsboro;
-
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 1rem;
+    
         > input {
             font-size: 1.3rem;
             padding: 1rem 3rem;
-            margin: 0 3rem;
             outline: none;
         }
-
+    
         > span {
             display: inline-block;
             padding: .5rem .8rem;
@@ -23,20 +27,20 @@
             color: white;
             font-size: 2.5rem;
             cursor: pointer;
-
+    
             > svg {
                 margin-bottom: 3px;
                 vertical-align: middle;
             }
         }
-
+    
         > button {
             font-size: 1.3rem;
             padding: 1rem 0;
             background-color: red;
             border: 2px solid red;
             cursor: pointer;
-
+    
             > a {
                 padding: 1rem 3rem;
                 color: white;
